Ingress-app-deployment/svcapp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-app-ex-svc
  labels:
    app: apple-app-ex
spec:
  selector:
    app: apple-app-ex
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
