Ingress-app-deployment/svcapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mango-app-ex-svc
  labels:
    app: mango-app-ex
spec:
  selector:
    app: mango-app-ex
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
