Ingress-app-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-app-ex
  labels:
    name: Ingress-app-ex
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  ingressClassName: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /apple
        backend:
          service:
            name: apple-app-ex-svc
            port: 
              number: 80 
  - http:
      paths:
      - pathType: Prefix
        path: /mango
        backend:
          service:
            name: mango-app-ex-svc
            port: 
              number: 80
